crates/ink/tests/ui/selector_bytes/fail/non_literal_parameter.rs
const INPUT: &str = "test";
const _: u32 = ink::selector_bytes!(INPUT);

fn main() {}
