crates/ink/tests/ui/selector_bytes/fail/non_literal_parameter.stderr
error: expected string or byte string literal as input: expected literal
 --> tests/ui/selector_bytes/fail/non_literal_parameter.rs:2:37
  |
2 | const _: u32 = ink::selector_bytes!(INPUT);
  |                                     ^^^^^
